client/src/App.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');

body, p {
    font-family: 'Poppins', sans-serif;
}


/* HEADERS */
h1, h2, h3, h4, h5, h6 {
    font-family: 'Poppins', sans-serif;
}

p {
  font-size: 18px!important;
  font-family: 'Poppins', sans-serif;
}

h3 {
  color: #00adef !important;
  text-align: left;
}

ul {
  list-style-type: none;
  margin: 0px;
  padding: 0px;
}


/* BUTTONS */
button {
  color: white;
}

.button-hover:hover {
  box-shadow: 0px 0px 7px 7px #cccccc;
}

.button-hover2:hover {
  box-shadow: 0px 0px 7px 7px #cccccc;
  background-color: white;
}


/* FORMS */
form, button {
  font-family: 'Poppins', sans-serif;
}

.form-label {
  font-size: 20px;
  color: #00adef;
}

#formValue, #formReward, #formDescription, #formFrequency {
  /* border-radius: 30px; */
  font-size: 16px;
}

.list-group {
  font-family: 'Poppins', sans-serif;
}

  
/* FOOTER */
  footer {
    background: #999999;
    color: #fff;
    font-family: Poppins, sans-serif;
    font-size: 20px;
    text-align: center;
    height: 80px;
    width: 100%;
    position: sticky;
    bottom: 0;
}

  div a {
    color: white;
  }

  div a:hover:visited {
    color: teal;
  }

